# OpLink

./: .gitignore  CMakeLists.txt  README.md  oplink.pro
oplink/: CMakeLists.txt
oplink/backend-bundles/: CMakeLists.txt
oplink/backend-bundles/TBUNDLE/lib/: CMakeLists.txt  TBUNDLE.h  TBUNDLE_forward.h  TBUNDLEservice.h
oplink/backend-bundles/TBUNDLE/plugin/: CMakeLists.txt  TBUNDLEserviceinterface.h
oplink/backend-bundles/console/: CMakeLists.txt
oplink/backend-bundles/console/lib/: CMakeLists.txt  olcmdprocessor.h  olconsolefactory.cpp  olconsolefactory.h  submitcmdprocessor.cpp  submitcmdprocessor.h  subscribecmdprocessor.h  subscribecmdprocessorhook.cpp
oplink/backend-bundles/console/plugin/: oplinkB-consoleplugin.cpp  oplinkB-consoleplugin.h
oplink/backend-bundles/engine/: CMakeLists.txt  oplinkB-enginebundle.json
oplink/backend-bundles/engine/lib/: CMakeLists.txt  gacserverenginestartedevent.h  observableservice.cpp  observableservice.h  serverengine.cpp  serverengine.h  serverenginefactory.cpp  serverenginelistener.cpp
oplink/backend-bundles/engine/plugin/: oplinkB-engineplugin.cpp  oplinkB-engineplugin.h
oplink/backend-bundles/enoceaninfrastructure/: CMakeLists.txt  oplinkB-enoceaninfrastructurebundle.json
oplink/backend-bundles/enoceaninfrastructure/conf/: infrastructure-enocean.xml
oplink/backend-bundles/enoceaninfrastructure/lib/: CMakeLists.txt  enoceaninfrastructure_forward.h  enoceaninfrastructurelogchannel.h
oplink/backend-bundles/enoceaninfrastructure/plugin/: oplinkB-enoceaninfrastructureplugin.cpp  oplinkB-enoceaninfrastructureplugin.h
oplink/backend-bundles/heatingmanagerset/: CMakeLists.txt  oplinkB-heatingmanagersetbundle.json
oplink/backend-bundles/heatingmanagerset/conf/: pw-heatingmanager.xml  pwt-heatingmanager.xml  pwt-heatingmanager_example.xml
oplink/backend-bundles/heatingmanagerset/lib/: CMakeLists.txt  heatingmanagerset.cpp  heatingmanagerset.h  heatingmanagerset_forward.h  heatingmanagersetfactory.cpp  heatingmanagersetfactory.h
oplink/backend-bundles/heatingmanagerset/plugin/: oplinkB-heatingmanagersetplugin.cpp
oplink/backend-bundles/observablemodelloader/: CMakeLists.txt  oplinkB-observablemodelloaderbundle.json
oplink/backend-bundles/observablemodelloader/conf/: homeautomation_observable_models.xml  observable-models.xml  observable-models_homeautomation_example.xml
oplink/backend-bundles/observablemodelloader/lib/: CMakeLists.txt  observablemodelloader.cpp  observablemodelloader.h  observablemodelloader_forward.h  observablemodelloaderemitter.cpp  observablemodelloaderemitter.h  observablemodelloaderfactory.cpp  observablemodelloaderfactory.h  observablemodelloaderlistener.cpp  observablemodelloaderlistener.h
oplink/backend-bundles/observablemodelloader/plugin/: oplinkB-observablemodelloaderplugin.cpp
oplink/backend-bundles/observablemodelregister/: CMakeLists.txt  oplinkB-observablemodelregisterbundle.json
oplink/backend-bundles/observablemodelregister/lib/: CMakeLists.txt  modelregisterservice.cpp  observablemodelregister.cpp  observablemodelregisterfactory.cpp  observablemodelregisterserviceimplementation.cpp
oplink/backend-bundles/observablemodelregister/plugin/: oplinkB-observablemodelregisterplugin.cpp
oplink/backend-bundles/tcpbackend/: CMakeLists.txt  oplinkB-tcpbackendbundle.json
oplink/backend-bundles/tcpbackend/lib/: CMakeLists.txt  tcpbackend_forward.h  tcpbackenddeserializer.h  tcpbackendlogchannel.h
oplink/backend-bundles/tcpbackend/plugin/: oplinkB-tcpbackendplugin.cpp
oplink/backend-launcher/: CMakeLists.txt  properties.ini  run-oplink-backend.sh
oplink/core-backend-lib/: CMakeLists.txt  olcore-backend-lib_export.h  olcore-backend-lib_forward.h
oplink/core-backend-lib/abstract_infrastructure/: infrastructure.cpp  infrastructure.h
oplink/core-backend-lib/abstract_infrastructure/area/: area.h  gatewayargs.cpp  gatewayargs.h
oplink/core-backend-lib/abstract_infrastructure/device/: device.h  devicecommandprocessor.h  devicehook.h
oplink/core-backend-lib/abstract_infrastructure/loading/: actuatoroutput.h  confreadererror.h  devicechannelsbinding.h  deviceprocessorbuilder.h  infrastructureconfreader.cpp  infrastructureloader.cpp  infrastructureloaderouts.cpp  infrastructureloaderouts.h  infrastructurestore.cpp  infrastructurestore.h
oplink/core-backend-lib/abstract_infrastructure/service/: infrastructurecontrolservice.h
oplink/core-backend-lib/abstract_virtualequipementset/: virtualequipmentset.cpp  virtualequipmentset.h  virtualequipmentsetbuilder.cpp  virtualequipmentsetbuilder.h  virtualequipmentsetfactory.cpp  virtualequipmentsetfactory.h
oplink/core-backend-lib/abstract_virtualequipementset/loading/: virtualequipmentloader.cpp  virtualequipmentloader.h  virtualequipmentsetconfreader.cpp  virtualequipmentsetconfreader.h  virtualequipmentsetloader.h  (+2 more)
oplink/core-backend-lib/command/: command.cpp  command.h
oplink/core-backend-lib/model/: modelnames.h  processormodelnames.cpp
oplink/core-backend-lib/observable/: observablelogchannel.h  observablenames.h
oplink/core-backend-lib/service-int/: modelregisterserviceinterface.h  observablebuilderserviceinterface.h  observableserviceinterface.h
oplink/core-lib/: CMakeLists.txt  frontendtypes.h  olcore-lib_forward.h
oplink/core-lib/command/: command-names.cpp  command-names.h
oplink/core-lib/network_tcp/: downloadconfigmessage.h  downloadconfigreplymessage.cpp  message.cpp  messagetype.h  readymessage.cpp  readymessage.h  sessionmessage.cpp  sessionmessage.h  sessionstartedmessage.h  signinmessage.cpp  signinreplymessage.h  signoutmessage.h  statevaluemessage.cpp  submitordermessage.cpp
oplink/core-lib/observable/: heatingmanagermodelnames.h  propertyid.cpp  propertyid.h  type.h  values.cpp  values.h
oplink/frontend-bundles/: CMakeLists.txt
oplink/frontend-bundles/TBUNDLE/: CMakeLists.txt
oplink/frontend-bundles/guiconsole/: CMakeLists.txt
oplink/frontend-bundles/tcpfrontend/: CMakeLists.txt
oplink/frontend-launcher/: CMakeLists.txt  elekdom.qss  run-oplink-frontend.sh
(+1006 files in other folders)
