# OpLink backend Core Lib Sources
set(SOURCES
    abstract_infrastructure/area/area.cpp
    abstract_infrastructure/area/areagateway.cpp
    abstract_infrastructure/area/gatewayargs.cpp
    abstract_infrastructure/device/device.cpp
    abstract_infrastructure/device/devicecommandprocessor.cpp
    abstract_infrastructure/infrastructure.cpp
    abstract_infrastructure/infrastructurefactory.cpp
    abstract_infrastructure/loading/actuatoroutput.cpp
    abstract_infrastructure/loading/actuatoroutputsbinding.cpp
    abstract_infrastructure/loading/devicebuilder.cpp
    abstract_infrastructure/loading/devicechannelsbinding.cpp
    abstract_infrastructure/loading/deviceprocessorbuilder.cpp
    abstract_infrastructure/loading/infrastructureconfreader.cpp
    abstract_infrastructure/loading/infrastructureloader.cpp
    abstract_infrastructure/loading/infrastructureloaderargs.cpp
    abstract_infrastructure/loading/infrastructureloaderouts.cpp
    abstract_infrastructure/loading/infrastructurestore.cpp
    abstract_infrastructure/loading/infrastructureworkerouts.cpp
    abstract_infrastructure/plugin/infrastructureplugin.cpp
    abstract_infrastructure/service/infrastructurecontrolservice.cpp
    abstract_virtualequipementset/loading/virtualequipmentloader.cpp
    abstract_virtualequipementset/loading/virtualequipmentsetconfreader.cpp
    abstract_virtualequipementset/loading/virtualequipmentsetloader.cpp
    abstract_virtualequipementset/loading/virtualequipmentsetloaderargs.cpp
    abstract_virtualequipementset/loading/virtualequipmentsetloaderouts.cpp
    abstract_virtualequipementset/plugin/virtualequipmentsetplugin.cpp
    abstract_virtualequipementset/service/virtualequipmentsetservice.cpp
    abstract_virtualequipementset/virtualequipmentset.cpp
    abstract_virtualequipementset/virtualequipmentsetbuilder.cpp
    abstract_virtualequipementset/virtualequipmentsetfactory.cpp
    command/command.cpp
    model/observable/observablebuilderargs.cpp
    model/observable/observablemodel.cpp
    model/observable/lowobservable/lowobservablemodel.cpp
    model/observable/lowobservable/actuatorbuilderargs.cpp
    model/observable/lowobservable/actuatormodel.cpp
    model/observable/lowobservable/loadbuilderargs.cpp
    model/observable/lowobservable/loadmodel.cpp
    model/observable/lowobservable/operationdevicebuilderargs.cpp
    model/observable/lowobservable/operationdevicemodel.cpp
    model/observable/lowobservable/sensorbuilderargs.cpp
    model/observable/lowobservable/sensormodel.cpp
    model/observable/highobservable/highobservablebuilderargs.cpp
    model/observable/highobservable/highobservablemodel.cpp
    model/observable/highobservable/supervisorobservable/supervisorobservablemodel.cpp
    model/observable/highobservable/supervisorobservable/supervisorobservablebuilderargs.cpp
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerbuilderargs.cpp
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagermodel.cpp
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerpwmodel.cpp
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerpwtmodel.cpp
    model/processor/commandprocessormodel.cpp
    model/processor/lowprocessor/expectedvaluecheckcommandprocessormodel.cpp
    model/processor/lowprocessor/expectedvaluenocheckcommandprocessormodel.cpp
    model/processor/lowprocessor/loadcommandprocessormodel.cpp
    model/processor/lowprocessor/lowcommandprocessormodel.cpp
    model/processor/lowprocessor/operationdevicecommandprocessormodel.cpp
    model/property/actuatorpropertymodel.cpp
    model/property/loadpropertymodel.cpp
    model/property/observablepropertymodel.cpp
    model/property/operationdevicepropertymodel.cpp
    model/property/sensorpropertymodel.cpp
    observable/observable/observable.cpp
    observable/observable/observablebuilder.cpp
    observable/observable/observablebuilderscontainer.cpp
    observable/observable/observableclassnames.cpp
    observable/observable/observablenotifier.cpp
    observable/observable/observablesubscriber.cpp
    observable/observable/lowobservable/load.cpp
    observable/observable/lowobservable/lowobservable.cpp
    observable/observable/lowobservable/operationdevice.cpp
    observable/observable/highobservable/highobservable.cpp
    observable/observable/highobservable/highobservableconfdocument.cpp
    observable/observable/highobservable/schedulerhook.cpp
    observable/observable/highobservable/supervisorobservable/supervisorobservable.cpp
    observable/observable/highobservable/supervisorobservable/monitor/grouptowatch.cpp
    observable/observable/highobservable/supervisorobservable/monitor/grouptowatchalgorithm.cpp
    observable/observable/highobservable/supervisorobservable/monitor/statetowatchlist.cpp
    observable/observable/highobservable/supervisorobservable/monitor/statetowatch.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/heatingmanager.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerconfdocument.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/pilotwirecontrolroom.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/pilotwirethermostatcontrolroom.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagercmdprocessor.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagersetprocessor.cpp
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagerroomprocessor.cpp
    observable/processor/commandprocessor.cpp
    observable/processor/processorclassnames.cpp
    observable/processor/lowprocessor/expectedvaluecheckprocessor.cpp
    observable/processor/lowprocessor/expectedvaluenocheckprocessor.cpp
    observable/processor/lowprocessor/loadcommandprocessor.cpp
    observable/processor/lowprocessor/lowcommandprocessor.cpp
    observable/processor/lowprocessor/operationdevicecommandprocessor.cpp
    observable/processor/highprocessor/highcommandprocessor.cpp
    observable/property/loadproperty.cpp
    observable/property/lowproperty.cpp
    observable/property/operationdeviceproperty.cpp
    observable/property/property.cpp
    observable/property/propertyclassnames.cpp
    observable/remote/remoteMonitoredobservable.cpp
    observable/remote/remotemonitoredobservablegroup.cpp
    observable/remote/sessionconfloader.cpp
    observable/remote/subscribesession.cpp
)

# OpLink backend Core Lib Headers
set(HEADERS
    olcore-backend-lib_export.h
    olcore-backend-lib_forward.h
    abstract_infrastructure/area/area.h
    abstract_infrastructure/area/areagateway.h
    abstract_infrastructure/area/gatewayargs.h
    abstract_infrastructure/device/device.h
    abstract_infrastructure/device/devicecommandprocessor.h
    abstract_infrastructure/device/devicehook.h
    abstract_infrastructure/infrastructure.h
    abstract_infrastructure/infrastructure-names.h
    abstract_infrastructure/infrastructurefactory.h
    abstract_infrastructure/loading/actuatoroutput.h
    abstract_infrastructure/loading/actuatoroutputsbinding.h
    abstract_infrastructure/loading/confreadererror.h
    abstract_infrastructure/loading/devicebuilder.h
    abstract_infrastructure/loading/devicechannelsbinding.h
    abstract_infrastructure/loading/deviceprocessorbuilder.h
    abstract_infrastructure/loading/infrastructureconfreader.h
    abstract_infrastructure/loading/infrastructureloader.h
    abstract_infrastructure/loading/infrastructureloaderargs.h
    abstract_infrastructure/loading/infrastructureloaderouts.h
    abstract_infrastructure/loading/infrastructureloadingoperations.h
    abstract_infrastructure/loading/infrastructurestore.h
    abstract_infrastructure/loading/infrastructureworkerouts.h
    abstract_infrastructure/plugin/infrastructureplugin.h
    abstract_infrastructure/service/infrastructurecontrolservice.h
    abstract_virtualequipementset/loading/virtualequipmentloader.h
    abstract_virtualequipementset/loading/virtualequipmentsetconfreader.h
    abstract_virtualequipementset/loading/virtualequipmentsetloader.h
    abstract_virtualequipementset/loading/virtualequipmentsetloaderargs.h
    abstract_virtualequipementset/loading/virtualequipmentsetloaderouts.h
    abstract_virtualequipementset/plugin/virtualequipmentsetplugin.h
    abstract_virtualequipementset/service/virtualequipmentsetservice.h
    abstract_virtualequipementset/virtualequipmentset.h
    abstract_virtualequipementset/virtualequipmentsetbuilder.h
    abstract_virtualequipementset/virtualequipmentsetfactory.h
    command/command.h
    model/modellogchannel.h
    model/modelnames.h
    model/observable/observablebuilderargs.h
    model/observable/observablemodel.h
    model/observable/lowobservable/lowobservablemodel.h
    model/observable/lowobservable/actuatorbuilderargs.h
    model/observable/lowobservable/actuatormodel.h
    model/observable/lowobservable/loadbuilderargs.h
    model/observable/lowobservable/loadmodel.h
    model/observable/lowobservable/operationdevicebuilderargs.h
    model/observable/lowobservable/operationdevicemodel.h
    model/observable/lowobservable/sensorbuilderargs.h
    model/observable/lowobservable/sensormodel.h
    model/observable/highobservable/highobservablebuilderargs.h
    model/observable/highobservable/highobservablemodel.h
    model/observable/highobservable/supervisorobservable/supervisorobservablemodel.h
    model/observable/highobservable/supervisorobservable/supervisorobservablebuilderargs.h
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerbuilderargs.h
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagermodel.h
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerpwmodel.h
    model/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerpwtmodel.h
    model/processor/commandprocessormodel.h
    model/processor/lowprocessor/expectedvaluecheckcommandprocessormodel.h
    model/processor/lowprocessor/expectedvaluenocheckcommandprocessormodel.h
    model/processor/lowprocessor/loadcommandprocessormodel.h
    model/processor/lowprocessor/lowcommandprocessormodel.h
    model/processor/lowprocessor/operationdevicecommandprocessormodel.h
    model/property/actuatorpropertymodel.h
    model/property/loadpropertymodel.h
    model/property/observablepropertymodel.h
    model/property/operationdevicepropertymodel.h
    model/property/sensorpropertymodel.h
    observable/observablelogchannel.h
    observable/observablenames.h
    observable/observable/observable.h
    observable/observable/observablebuilder.h
    observable/observable/observablebuilderscontainer.h
    observable/observable/observableclassnames.h
    observable/observable/observablenotifier.h
    observable/observable/observablesubscriber.h
    observable/observable/lowobservable/load.h
    observable/observable/lowobservable/lowobservable.h
    observable/observable/lowobservable/operationdevice.h
    observable/observable/highobservable/highobservable.h
    observable/observable/highobservable/schedulerhook.h
    observable/observable/highobservable/highobservableconfdocument.h
    observable/observable/highobservable/highobservableloaderhook.h
    observable/observable/highobservable/supervisorobservable/supervisorobservable.h
    observable/observable/highobservable/supervisorobservable/monitor/grouptowatch.h
    observable/observable/highobservable/supervisorobservable/monitor/grouptowatchalgorithm.h
    observable/observable/highobservable/supervisorobservable/monitor/statetowatch.h
    observable/observable/highobservable/supervisorobservable/monitor/statetowatchlist.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/heatingmanager.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerconfdocument.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/heatingmanagerloaderhook.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/pilotwirecontrolroom.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/pilotwirethermostatcontrolroom.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagercmdprocessor.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagersetprocessor.h
    observable/observable/highobservable/supervisorobservable/heatingmanager/processor/heatingmanagerroomprocessor.h
    observable/processor/commandprocessor.h
    observable/processor/processorclassnames.h
    observable/processor/lowprocessor/expectedvaluecheckprocessor.h
    observable/processor/lowprocessor/expectedvaluenocheckprocessor.h
    observable/processor/lowprocessor/loadcommandprocessor.h
    observable/processor/lowprocessor/lowcommandprocessor.h
    observable/processor/lowprocessor/operationdevicecommandprocessor.h
    observable/processor/highprocessor/highcommandprocessor.h
    observable/property/loadproperty.h
    observable/property/lowproperty.h
    observable/property/operationdeviceproperty.h
    observable/property/property.h
    observable/property/propertyclassnames.h
    observable/remote/remoteMonitoredobservable.h
    observable/remote/remotemonitoredobservablegroup.h
    observable/remote/sessionconfloader.h
    observable/remote/subscribesession.h
    service-int/infrastructurecontrolserviceinterface.h
    service-int/modelregisterserviceinterface.h
    service-int/observablebuilderserviceinterface.h
    service-int/observableserviceinterface.h
    service-int/virtualequipmentsetserviceinterface.h
)

qt_add_library(${OL_BACKEND_LIB_NAME} SHARED ${SOURCES} ${HEADERS})

set_target_properties(${OL_BACKEND_LIB_NAME}
                      PROPERTIES
                      VERSION ${OL_BACKEND_LIB_VERSION}
                      SOVERSION ${OL_BACKEND_LIB_VERSION_MAJOR}
)

target_include_directories(${OL_BACKEND_LIB_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(${OL_BACKEND_LIB_NAME}
    PRIVATE
        Qt6::Core
        Qt6::Xml
        plugframe-core-qt6
        oplink-core-qt6
)

# For Export Declaration
target_compile_definitions(${OL_BACKEND_LIB_NAME}
    PUBLIC
        OLCORE_BACKEND_LIBRARY
)

# Disable Debug Log for Release
target_compile_definitions(${OL_BACKEND_LIB_NAME}
    PUBLIC
        $<$<CONFIG:Release>:QT_NO_DEBUG_OUTPUT>
)
